# MirGovorit_test

./: .gitignore  pyproject.toml
cooking_book/cooking_book/: asgi.py  settings.py  urls.py  wsgi.py
cooking_book/my_app/: admin.py  models.py  urls.py  views.py
cooking_book/my_app/migrations/: 0001_initial.py  0002_alter_recipeproduct_weight.py
cooking_book/templates/: recipes_without_product.html
